restored external browser module from NB IDE cluster now that dependency debugger module was removed in 7.4; returned old code to using URLDisplayer