@@ -4,11 +4,8 @@
  */
 package blue.application;
 
-import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import org.openide.awt.ActionID;
 import org.openide.awt.ActionReference;
@@ -19,7 +16,7 @@ import org.openide.util.Exceptions;
 import org.openide.util.NbBundle.Messages;
 
 @ActionID(category = "Application",
-id = "blue.application.BlueChatAction")
+        id = "blue.application.BlueChatAction")
 @ActionRegistration(displayName = "#CTL_BlueChatAction")
 @ActionReferences({
     @ActionReference(path = "Menu/Help", position = 1600, separatorBefore = 1550)
@@ -29,15 +26,11 @@ public final class BlueChatAction implements ActionListener {
 
     @Override
     public void actionPerformed(ActionEvent e) {
-        
+
         String url = "http://webchat.freenode.net/?channels=%23csound%2C%23bluecsound";
 
         try {
-            if (Desktop.isDesktopSupported()) {
-                Desktop.getDesktop().browse(new URI(url));
-            } else {
-                URLDisplayer.getDefault().showURL(new URL(url));
-            }
+            URLDisplayer.getDefault().showURL(new URL(url));
         } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
         }
