@@ -4,10 +4,8 @@
  */
 package blue.application;
 
-import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.net.URI;
 import java.net.URL;
 import org.openide.awt.HtmlBrowser.URLDisplayer;
 import org.openide.util.Exceptions;
@@ -19,11 +17,7 @@ public final class RequestFeatureAction implements ActionListener {
     @Override
     public void actionPerformed(ActionEvent e) {
         try {
-            if (Desktop.isDesktopSupported()) {
-                Desktop.getDesktop().browse(new URI(URL_RFE));
-            } else {
-                URLDisplayer.getDefault().showURL(new URL(URL_RFE));
-            }
+            URLDisplayer.getDefault().showURL(new URL(URL_RFE));
         } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
         }
